# PyWizardry

./: .gitignore  README.md  pyproject.toml  setup.py
src/pywizardry/: __init__.py
