[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyWizardry"
version = "1.0.1"
description = "A magical collection of 150+ Python utilities for modern development"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Saif", email = "saifullahanwar00040@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pywizardry.vercel.app"
Documentation = "https://pywizardry.vercel.app/docs"

[project.optional-dependencies]
full = [
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
extras = [
    "pycryptodome>=3.19.0",
    "python-magic>=0.4.27",
    "pydantic>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]